--- a/miniprojet/miniprojet.html
+++ b/miniprojet/miniprojet.html
@@ -29,23 +29,23 @@
             <header id="album">
                     <h4>Yeppy Yeah</h4>
                     <h5>I'm feeling Yep</h5>
-                <!--<img src="assets/images/tree.png">-->
+                <img src="assets/images/tree.png">
             </header>
             <section id="list">
                 <ul>
-                    <li><!--<img src="assets/images/equalizer.png">-->
+                    <li><img src="assets/images/equalizer.png">
                     <h6>Yeppin' on a prayer</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Yep it be</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Yeppin on the dock of the day</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Because the yep</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Leaving Las Yepas</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Enter Yepman</h6></li>
-                    <li><!--<img src="assets/images/play.png">-->
+                    <li><img src="assets/images/play.png">
                     <h6>Fear of the yep</h6></li>
                 </ul>
             </section>
