--- a/miniprojet2/miniprojet2.html
+++ b/miniprojet2/miniprojet2.html
@@ -24,6 +24,7 @@
     <section id="formule">
         <article id="basic">
             <header><h3>Basic</h3></header>
+            <section class="border">
             <section>
                 <ul>
                     <li>Une publicité tous les 3 Yeps</li>
@@ -32,10 +33,12 @@
                     <li>Partagez vos Yeplists</li>
                 </ul>
             </section>
-            <footer>3.99 $ / mois</footer>
+            <footer><p>3.99 $ / mois</p></footer>
+            </section>
         </article>
         <article id="premium">
           <header><h3>Premium</h3></header>
+          <section class="border-2">
           <section>
                 <ul>
                     <li>Une publicité tous les 20 Yeps</li>
@@ -46,10 +49,12 @@
                     <li>Mini studio de création de Yep</li>
                 </ul>
             </section>
-            <footer>9.99 $ /mois</footer>
+            <footer><p>9.99 $ /mois</p></footer>
+            </section>
         </article>
         <article id="pro">
             <header><h3>Pro</h3></header>
+            <section class="border">
             <section>
                 <ul>
                     <li>Une publicité tous les 20 Yeps</li>
@@ -60,7 +65,8 @@
                     <li>Gagnez des royalties sur vos Yeps</li>
                 </ul>
             </section>
-            <footer>15.99 $ / mois</footer>
+            <footer><p>15.99 $ / mois</p></footer>
+            </section>
         </article>
     </section>
 </main>
